video page 추가 작업 comment 부분 추가

--- a/html/feed.html
+++ b/html/feed.html
@@ -46,7 +46,7 @@
             10<span class="visually-hidden">unread messages</span>
           </span>
           </button>
-          <button class="card-icon" type="button" data-bs-toggle="modal" data-bs-target="#userInfoModal">
+          <button class="non-btn" type="button" data-bs-toggle="modal" data-bs-target="#userInfoModal">
             <img class="card-icon" src="../img/dory.jpg">
           </button>
         </div>
@@ -63,7 +63,7 @@
         <button type="button" id="closeSidebarBtn" class="sidebar-close-btn">
           <span class="toggler-icon"><img src="../img/menu.png" alt="" style="height: 35px;"></span>
         </button>
-        <a class="navbar-brand mb-0" onclick="location.reload()">
+        <a class="navbar-brand mb-0" href="../index.html">
           <img src="../img/logo.png" alt="Logo" style="height: 30px;">
         </a>
       </li>
@@ -71,7 +71,7 @@
   </div>
   <div class="sidebar-slide-content">
     <ul class="nav flex-column">
-      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" onclick="location.reload()" title="홈">
+      <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="../index.html" title="홈">
         <img class="button-img" src="../img/home.png">홈</a></li>
       <li class="nav-item sidebar-slide-item"><a class="navbar-brand" href="#" title="Shorts">
         <img class="button-img" src="../img/shorts.png" alt="Shorts">Shorts</a>
@@ -182,7 +182,7 @@
   <div class="row g-0">
     <!-- 왼쪽 사이드바 -->
     <div class="main-navbar">
-      <a class="main-navbar-item" href="main.html" title="홈"><img src="../img/home.png"><br>홈</a>
+      <a class="main-navbar-item" href="../index.html" title="홈"><img src="../img/home.png"><br>홈</a>
       <a class="main-navbar-item" href="#" title="Shorts"><img src="../img/shorts.png"><br>Shorts</a>
       <a class="main-navbar-item" href="feed.html" title="구독"><img src="../img/subscriptions.png"><br>구독</a>
       <a class="main-navbar-item" href="#" title="내 페이지"><img src="../img/my.png"><br>내 페이지</a>
