--- a/html/main.html
+++ b/html/main.html
@@ -46,7 +46,7 @@
             10<span class="visually-hidden">unread messages</span>
           </span>
           </button>
-          <button class="card-icon" type="button" data-bs-toggle="modal" data-bs-target="#userInfoModal">
+          <button class="non-btn" type="button" data-bs-toggle="modal" data-bs-target="#userInfoModal">
             <img class="card-icon" src="../img/dory.jpg">
           </button>
         </div>
