index.html 참고주소변경 feed 추가 분리

--- a/html/feed.html
+++ b/html/feed.html
@@ -226,6 +226,6 @@
   <div id="sidebarOverlay" class="sidebar-overlay"></div>
 </div>
 <script src="../js/total.js"></script>
-<script src="../js/main.js"></script>
+<script src="../js/feed.js"></script>
 </body>
 </html>
